force-app/main/default/objects/Account/fields/Bookkeeping_Source__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeping_Source__c</fullName>
    <label>Bookkeeping Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>Freshbooks</fullName>
            </value>
            <value>
                <fullName>Wave</fullName>
            </value>
            <value>
                <fullName>Spreadsheets</fullName>
            </value>
            <value>
                <fullName>1-800 Client Portal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>