force-app/main/default/objects/Account/fields/Bookkeeping_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeping_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bookkeeping Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>