force-app/main/default/objects/Account/fields/BTP_Cancelled_2016__c.field-meta.xml
<CustomField>
    <fullName>BTP_Cancelled_2016__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BTP - Cancelled (2016)</label>
    <type>Checkbox</type>
</CustomField>