force-app/main/default/objects/Account/fields/BTP_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>BTP_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BTP - Cancelled</label>
    <type>Checkbox</type>
</CustomField>