force-app/main/default/objects/Account/fields/BTP_Client__c.field-meta.xml
<CustomField>
    <fullName>BTP_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BTP Client</label>
    <type>Checkbox</type>
</CustomField>