force-app/main/default/objects/Account/fields/BTP_Date__c.field-meta.xml
<CustomField>
    <fullName>BTP_Date__c</fullName>
    <description>BTP Paid Date if available, else the date the BTP checkbox was selected.</description>
    <formula>IF(  BTP_Paid_2020__c = True  &amp;&amp; ISBLANK( BTP_Paid_Date__c )   , Today(), BTP_Paid_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BTP Date</label>
    <type>Date</type>
</CustomField>