force-app/main/default/objects/Account/fields/BTP_Paid_2017__c.field-meta.xml
<CustomField>
    <fullName>BTP_Paid_2017__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BTP - Paid (2017)</label>
    <type>Checkbox</type>
</CustomField>