force-app/main/default/objects/Account/fields/BTP_Paid__c.field-meta.xml
<CustomField>
    <fullName>BTP_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BTP - Paid</label>
    <type>Checkbox</type>
</CustomField>