force-app/main/default/objects/Account/fields/BTP_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>BTP_Paid_Date__c</fullName>
    <label>BTP Paid Date</label>
    <type>Date</type>
</CustomField>