force-app/main/default/objects/Account/fields/BTP_Refund_2018__c.field-meta.xml
<CustomField>
    <fullName>BTP_Refund_2018__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BTP - Refund (2018)</label>
    <type>Checkbox</type>
</CustomField>