force-app/main/default/objects/Account/fields/BTP_Refund__c.field-meta.xml
<CustomField>
    <fullName>BTP_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BTP - Refund</label>
    <type>Checkbox</type>
</CustomField>