force-app/main/default/objects/Account/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Account?</label>
    <type>Checkbox</type>
</CustomField>