force-app/main/default/objects/Account/fields/Business_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Description__c</fullName>
    <label>Business Description</label>
    <type>TextArea</type>
</CustomField>