force-app/main/default/objects/Account/fields/Business_Detail__c.field-meta.xml
<CustomField>
    <fullName>Business_Detail__c</fullName>
    <label>Business Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>