force-app/main/default/objects/Account/fields/Business_Details__c.field-meta.xml
<CustomField>
    <fullName>Business_Details__c</fullName>
    <label>Business Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>