force-app/main/default/objects/Account/fields/Business_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_Type__c</fullName>
    <label>Business Entity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>