force-app/main/default/objects/Account/fields/Business_Industry__c.field-meta.xml
<CustomField>
    <fullName>Business_Industry__c</fullName>
    <label>Business Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>