force-app/main/default/objects/Account/fields/Business_Name_Changed_in_2019__c.field-meta.xml
<CustomField>
    <fullName>Business_Name_Changed_in_2019__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Name Changed in 2019</label>
    <type>Checkbox</type>
</CustomField>