force-app/main/default/objects/Account/fields/Business_Partners__c.field-meta.xml
<CustomField>
    <fullName>Business_Partners__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Partners</label>
    <type>Checkbox</type>
</CustomField>