force-app/main/default/objects/Account/fields/Business_Personal__c.field-meta.xml
<CustomField>
    <fullName>Business_Personal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business + Personal</label>
    <type>Checkbox</type>
</CustomField>