force-app/main/default/objects/Account/fields/Business_Primary_Activity__c.field-meta.xml
<CustomField>
    <fullName>Business_Primary_Activity__c</fullName>
    <label>Business Primary Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>