force-app/main/default/objects/Account/fields/Business_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Business_Purpose__c</fullName>
    <label>Business Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>