force-app/main/default/objects/Account/fields/Business_Return_Plan__c.field-meta.xml
<CustomField>
    <fullName>Business_Return_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Return Plan</label>
    <type>Checkbox</type>
</CustomField>