force-app/main/default/objects/Account/fields/Business_Tax_Prep__c.field-meta.xml
<CustomField>
    <fullName>Business_Tax_Prep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Tax Prep</label>
    <type>Checkbox</type>
</CustomField>