force-app/main/default/objects/Account/fields/Business_Tax_Prep_purchased_through_LZ__c.field-meta.xml
<CustomField>
    <fullName>Business_Tax_Prep_purchased_through_LZ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2015 LZ BTP Purchased</label>
    <type>Checkbox</type>
</CustomField>