force-app/main/default/objects/Account/fields/Business_VTO_final_reminder__c.field-meta.xml
<CustomField>
    <fullName>Business_VTO_final_reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business VTO final reminder</label>
    <type>Checkbox</type>
</CustomField>