force-app/main/default/objects/Account/fields/BVTO_2016_quantity__c.field-meta.xml
<CustomField>
    <fullName>BVTO_2016_quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>BVTO 2016 quantity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>