force-app/main/default/objects/Account/fields/Callback_Notes__c.field-meta.xml
<CustomField>
    <fullName>Callback_Notes__c</fullName>
    <label>Callback Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>