force-app/main/default/objects/Account/fields/Campaign_Last_Touch__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Last_Touch__c</fullName>
    <description>The most recent Campaign that the record entered in.</description>
    <label>Campaign (Last Touch)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business.com</fullName>
            </value>
            <value>
                <fullName>Call EIN</fullName>
            </value>
            <value>
                <fullName>Call Entity Formation</fullName>
            </value>
            <value>
                <fullName>Call In</fullName>
            </value>
            <value>
                <fullName>Chat Accounting Services</fullName>
            </value>
            <value>
                <fullName>Chat Blog Join Now</fullName>
            </value>
            <value>
                <fullName>Chat Bookkeeping Services</fullName>
            </value>
            <value>
                <fullName>Chat EIN</fullName>
            </value>
            <value>
                <fullName>Chat Entity Formation</fullName>
            </value>
            <value>
                <fullName>Chat Hannity</fullName>
            </value>
            <value>
                <fullName>Chat Join Now</fullName>
            </value>
            <value>
                <fullName>Chat Payroll</fullName>
            </value>
            <value>
                <fullName>Chat Pricing Page</fullName>
            </value>
            <value>
                <fullName>Chat Tax Services</fullName>
            </value>
            <value>
                <fullName>Entity Formation</fullName>
            </value>
            <value>
                <fullName>Issue1099</fullName>
            </value>
            <value>
                <fullName>Join Now</fullName>
            </value>
            <value>
                <fullName>MVF Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>