force-app/main/default/objects/Account/fields/Campaign_Text__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Text__c</fullName>
    <description>A text string of the values in the Campaign field</description>
    <label>Campaign (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>