force-app/main/default/objects/Account/fields/CampaignID__c.field-meta.xml
<CustomField>
    <fullName>CampaignID__c</fullName>
    <label>CampaignID</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1on1</fullName>
            </value>
            <value>
                <fullName>BTP/Upsell</fullName>
            </value>
            <value>
                <fullName>$49 Consult</fullName>
            </value>
            <value>
                <fullName>Merchant Services</fullName>
            </value>
            <value>
                <fullName>Complete Accounting</fullName>
            </value>
            <value>
                <fullName>Corporate Abandons</fullName>
            </value>
            <value>
                <fullName>Quarterly Tax Filing</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>