force-app/main/default/objects/Account/fields/Canceled_Suspended_Products__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Suspended_Products__c</fullName>
    <label>Canceled / Suspended Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>