force-app/main/default/objects/Account/fields/Cancellation_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Case Created</label>
    <type>Checkbox</type>
</CustomField>