force-app/main/default/objects/Account/fields/Cancellation_Case_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Case_Created_Date__c</fullName>
    <label>Cancellation Case Created Date</label>
    <type>Date</type>
</CustomField>