force-app/main/default/objects/Account/fields/CAP__c.field-meta.xml
<CustomField>
    <fullName>CAP__c</fullName>
    <formula>INCLUDES( Sales_Rep__r.Skills_Sales__c ,&quot;CAP&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAP</label>
    <type>Checkbox</type>
</CustomField>