force-app/main/default/objects/Account/fields/CAP_Pitched_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CAP_Pitched_Date_Time__c</fullName>
    <description>When the CAP Rep pitched services</description>
    <label>CAP Consulted Date/Time</label>
    <type>DateTime</type>
</CustomField>