force-app/main/default/objects/Account/fields/CAP_Rep__c.field-meta.xml
<CustomField>
    <fullName>CAP_Rep__c</fullName>
    <description>Sales Rep that pitched CAP services</description>
    <label>CAP Rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>