force-app/main/default/objects/Account/fields/Chargeback_Status__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Status__c</fullName>
    <description>The status of the Account&apos;s most recent chargeback, if applicable.</description>
    <label>Chargeback Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chargeback Received</fullName>
            </value>
            <value>
                <fullName>Chargeback Lost</fullName>
            </value>
            <value>
                <fullName>Chargeback Won</fullName>
            </value>
            <value>
                <fullName>Prevention Alert Received</fullName>
            </value>
            <value>
                <fullName>Pre-Arb Received</fullName>
            </value>
            <value>
                <fullName>Pre-Arb Not Disputed / Lost</fullName>
            </value>
            <value>
                <fullName>Pre-Arb Won</fullName>
            </value>
            <value>
                <fullName>Retrieval Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>