force-app/main/default/objects/Account/fields/ChargeOver_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Customer_Status__c</fullName>
    <label>ChargeOver Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Inactive (no recent activity)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>