force-app/main/default/objects/Account/fields/ChargeOver_Customer_Token__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Customer_Token__c</fullName>
    <description>A token from ChargeOver to improve ID syncing for updating payments</description>
    <label>ChargeOver Customer Token</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>