force-app/main/default/objects/Account/fields/ChargeOver_ID__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_ID__c</fullName>
    <externalId>true</externalId>
    <label>ChargeOver ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>