force-app/main/default/objects/Account/fields/ChargeOver_Initial_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Initial_Payment_Date__c</fullName>
    <description>The Transaction Date of the earliest ChargeOver Transaction related to the Account</description>
    <label>ChargeOver Initial Payment Date</label>
    <type>DateTime</type>
</CustomField>