force-app/main/default/objects/Account/fields/ChargeOver_Most_Recent_Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Most_Recent_Refund_Date__c</fullName>
    <description>The Transaction Date of the most recent ChargeOver Refund Transaction related to the Account</description>
    <label>ChargeOver Most Recent Refund Date</label>
    <type>Date</type>
</CustomField>