force-app/main/default/objects/Account/fields/Chat_Client__c.field-meta.xml
<CustomField>
    <fullName>Chat_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for list of clients for chat on website. Check if the client has one of the following Active Subscriptions: Additional Personal Return, Personal Tax Preparation, Business Tax Preparation, Expedited Business Tax Preparation, Personal Expedited Tax Preparation, Schedule C, Schedule Tax Filing, Schedule C w/ Bundle</description>
    <label>Chat Client</label>
    <type>Checkbox</type>
</CustomField>