force-app/main/default/objects/Account/fields/Client_Age_at_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Client_Age_at_Cancellation__c</fullName>
    <description>The number of days an account has been a client when a cancellation request is received</description>
    <formula>Cancellation_Case_Created_Date__c -  First_Subscription_Date__c</formula>
    <inlineHelpText>How old the client account is when a cancellation request is received.</inlineHelpText>
    <label>Client Age at Cancellation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>