force-app/main/default/objects/Account/fields/Client_Books__c.field-meta.xml
<CustomField>
    <fullName>Client_Books__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Books</label>
    <type>Checkbox</type>
</CustomField>