force-app/main/default/objects/Account/fields/Client_Books_Access_Only__c.field-meta.xml
<CustomField>
    <fullName>Client_Books_Access_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Books Access Only</label>
    <type>Checkbox</type>
</CustomField>