force-app/main/default/objects/Account/fields/Client_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Client_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Escalation</label>
    <type>Checkbox</type>
</CustomField>