force-app/main/default/objects/Account/fields/Client_Outreach_Nov_2016__c.field-meta.xml
<CustomField>
    <fullName>Client_Outreach_Nov_2016__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Outreach Nov 2016</label>
    <type>Checkbox</type>
</CustomField>