force-app/main/default/objects/Account/fields/COGS_12_months_prior_to_1_31_20__c.field-meta.xml
<CustomField>
    <fullName>COGS_12_months_prior_to_1_31_20__c</fullName>
    <label>COGS 12 months prior to 1/31/20</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>