force-app/main/default/objects/Account/fields/Collections_Rep__c.field-meta.xml
<CustomField>
    <fullName>Collections_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collections Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsBPRb</relationshipName>
    <type>Lookup</type>
</CustomField>