force-app/main/default/objects/Account/fields/Company_Brand__c.field-meta.xml
<CustomField>
    <fullName>Company_Brand__c</fullName>
    <defaultValue>&quot;1800Accountant&quot;</defaultValue>
    <label>Company Brand</label>
    <length>32</length>
    <type>Text</type>
</CustomField>