force-app/main/default/objects/Account/fields/Completed_Tax_Return__c.field-meta.xml
<CustomField>
    <fullName>Completed_Tax_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Tax Return</label>
    <type>Checkbox</type>
</CustomField>