force-app/main/default/objects/Account/fields/Consulted_by_email__c.field-meta.xml
<CustomField>
    <fullName>Consulted_by_email__c</fullName>
    <label>Consulted by email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>