force-app/main/default/objects/Account/fields/Consulted_By_Phone__c.field-meta.xml
<CustomField>
    <fullName>Consulted_By_Phone__c</fullName>
    <label>Consulted By - Phone</label>
    <type>Phone</type>
</CustomField>