force-app/main/default/objects/Account/fields/Corp_Compliance_Completed__c.field-meta.xml
<CustomField>
    <fullName>Corp_Compliance_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corp Compliance Completed</label>
    <type>Checkbox</type>
</CustomField>