force-app/main/default/objects/Account/fields/Corp_Fulfillment_Complete__c.field-meta.xml
<CustomField>
    <fullName>Corp_Fulfillment_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corp Fulfillment Complete</label>
    <type>Checkbox</type>
</CustomField>