force-app/main/default/objects/Account/fields/Corp_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Corp_Lead_Status__c</fullName>
    <label>Corp Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Webinar Requested</fullName>
            </value>
            <value>
                <fullName>Webinar Attended</fullName>
            </value>
            <value>
                <fullName>Webinar No Show</fullName>
            </value>
            <value>
                <fullName>1-1 Request</fullName>
            </value>
            <value>
                <fullName>1-1 No Show</fullName>
            </value>
            <value>
                <fullName>Pitched</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Bad Number</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Dupe</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Not Interested in Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>