force-app/main/default/objects/Account/fields/Corp_Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Corp_Sales_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Corp Sales Rep</description>
    <label>Corp Sales Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>