force-app/main/default/objects/Account/fields/Corp_Setup_Docs_Received__c.field-meta.xml
<CustomField>
    <fullName>Corp_Setup_Docs_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corp Setup Docs Received</label>
    <type>Checkbox</type>
</CustomField>