force-app/main/default/objects/Account/fields/Corp_setup_link_sent__c.field-meta.xml
<CustomField>
    <fullName>Corp_setup_link_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corp Setup Email Sent</label>
    <type>Checkbox</type>
</CustomField>