force-app/main/default/objects/Account/fields/Corp_Status__c.field-meta.xml
<CustomField>
    <fullName>Corp_Status__c</fullName>
    <label>Corp Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Status</fullName>
                <default>true</default>
                <label>No Status</label>
            </value>
            <value>
                <fullName>Awaiting State Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting RA Signature</fullName>
            </value>
            <value>
                <fullName>Awaiting Clients Signature</fullName>
            </value>
            <value>
                <fullName>Business Name Rejected</fullName>
            </value>
            <value>
                <fullName>CC Declined By State</fullName>
            </value>
            <value>
                <fullName>EIN Issue</fullName>
            </value>
            <value>
                <fullName>Refer to Notes</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Discard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>