force-app/main/default/objects/Account/fields/Corp_Upsale__c.field-meta.xml
<CustomField>
    <fullName>Corp_Upsale__c</fullName>
    <formula>INCLUDES( Sales_Rep__r.Skills_Sales__c ,&quot;Corp Upsales&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corp Upsale</label>
    <type>Checkbox</type>
</CustomField>