force-app/main/default/objects/Account/fields/Count_of_Scheduled_1_1__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Scheduled_1_1__c</fullName>
    <description>Give a count of 1-1&apos;s scheduled.</description>
    <formula>IF( NOT ISBLANK( X1_1_Scheduled__c )  , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Give a count of 1-1&apos;s scheduled.</inlineHelpText>
    <label>Count of Scheduled 1-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>