force-app/main/default/objects/Account/fields/Country_of_Orgin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Orgin__c</fullName>
    <label>Country of Orgin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>